fix on mobile

--- a/css/nav-footer.css
+++ b/css/nav-footer.css
@@ -104,13 +104,9 @@ footer {
 .bgimg-1, .bgimg-2, .bgimg-3, .bgimg-4, .bgimg-5, .bgimg-6, .bgimg-7, .bgimg-8, .bgimg-9 {
   position: relative;
   background-attachment: fixed;
-  background-position: center;
+  background-position: center center;
   background-repeat: no-repeat;
-  -webkit-background-size:cover;
-  -moz-background-size:cover;
-  -o-background-size:cover;
-  background-size:cover;
-  width: 100%;
+  height: 100vh;
 }
 
 .bgimg-1 {
